Add ESAP to legend

--- a/plugin.xml
+++ b/plugin.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <plugin xmlns="http://plugin.powerschool.pearson.com"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-        description="Generates official PEI Student Transcripts - v1.1 Updates English Programs reqs."
+        description="Generates official PEI Student Transcripts - v1.3 Add ESAP to legend."
         name="PEI Transcript"
-        version="1.1.1"
+        version="1.3"
         xsi:schemaLocation="http://plugin.powerschool.pearson.com plugin.xsd">
 <publisher name="Department of Education and Lifelong Learning - Luke Walker">
   <contact email="lawalker@edu.pe.ca"/>
