--- a/plugin.xml
+++ b/plugin.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <plugin xmlns="http://plugin.powerschool.pearson.com"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-        description="Generates official PEI Student Transcripts - v1.3 Add ESAP to legend."
+        description="Generates official PEI Student Transcripts - testing v2, complete rewrite"
         name="PEI Transcript"
-        version="1.3"
+        version="2.0.0"
         xsi:schemaLocation="http://plugin.powerschool.pearson.com plugin.xsd">
 <publisher name="Department of Education and Lifelong Learning - Luke Walker">
-  <contact email="lawalker@edu.pe.ca"/>
+  <contact email="lawalker@gov.pe.ca"/>
 </publisher>
 </plugin>
